# siade/app/serializers/dgfip/chiffres_affaires_serializer/v3.rb
@@ -1,0 +1,6 @@
+class DGFIP::ChiffresAffairesSerializer::V3 < JSONAPI::BaseSerializer
+  set_type :exercice
+
+  attributes :chiffre_affaires,
+    :date_fin_exercice
+end
