# siade/config/routes.rb
@@ -79,6 +79,7 @@ Rails.application.routes.draw do
 
     namespace :dgfip do
       get 'liasses_fiscales/declarations/:year/:siren' => '/api/v3_and_more/dgfip/liasses_fiscales/declarations#show'
+      get 'chiffres_affaires/:siret' => '/api/v3_and_more/dgfip/chiffres_affaires#show'
     end
 
     namespace :fntp do
