# siade/config/swagger_information.yml
@@ -172,6 +172,34 @@ dgfip:
         - "Informations financières"
       attributes: {}
 
+  chiffres_affaires:
+    title: "Chiffres d'affaires"
+    description: "Obtenir les déclarations de chiffre d’affaire faites auprès de la DGFIP, et portées sur la liasse fiscale.
+      \n
+      \n
+      Sont disponibles uniquement les chiffres d’affaire des entreprises qui vérifient les deux conditions suivantes :
+      \n
+      * être soumises à l’impôt sur les sociétés selon les règles des régimes d’imposition réels, normal ou simplifié ;
+      \n
+      * avoir transmis ses comptes annuels aux greffes.
+      \n
+      \n
+      Seuls les trois derniers exercices sont renvoyés.
+      \n
+      ℹ️ Ceux-ci ne sont pas forcément les exercices des trois dernières années car il peut y avoir plusieurs exercices dans une même année."
+    tags:
+      - "Informations financières"
+    items:
+      properties:
+        chiffre_affaires:
+          type: "number"
+          example: 900_001
+          description: "Chiffre d'affaires en euros de l'établissement sur la période"
+        date_fin_exercice:
+          type: "string"
+          example: "2015-12-01"
+          description: "Date de fin de l'exercice"
+
 fntp:
   carte_professionnelle_travaux_publics:
     title: "Carte professionnelle de travaux publics"
